# euclidean-shopa-approximation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  all.hpp  main.cpp  test.h  test_read.cpp  test_route_stgtregbz.cpp  test_route_toy.cpp
docs/: Doxyfile.in
experiments/: .gitignore  utils.sh
experiments/angle_distribution/: compute.sh  compute_stats.sh  plot.py
experiments/explicit/: boxplots.py  compute.sh  distances.py  generate_pruned.sh  process.sh
experiments/graph-properties/: compute.sh  plot.py
experiments/graph_size_by_epsilon/: compute.sh  node_count.pgf  plot.py
experiments/neighbor_finding/: compute_aegaeis.sh  plot_by_algorithm.py  utils.sh
experiments/no-tree/: compute_coastlines.sh  process.sh  summarize.py
experiments/one-to-all/: compute_aegaeis.sh  compute_pata.sh  distances.py  plot_over_epsilon.py  process.sh  summarize.py
experiments/shortest_paths/: compute.sh  compute_aegaeis.sh  compute_medi.sh  compute_pata.sh  compute_toy.sh  plot.py  plot_over_epsilon.py  process.sh  summarize.py  utils.sh
experiments/small_angles/: compute.sh  node_count.pgf  plot.py  test.sh
file-io/: graph_reader.h
graph/: adjacency_list.h  base_types.h  bidirectional_adjacency_list.h  graph.h
model/: __init__.py
routing/: dijkstra.h  dijkstra_rules.h  routing.h
scripts/: aegaeis10-ref-inangles.csv  aegaeis10-unref-inangles.csv  bench.sh  check_epsilon.sh  compare.sh  compute_stats.sh  graph_sizes.csv  graph_sizes_5deg.csv  graph_stats.csv  plot.py  plot_statistic.py  show_graph_sizes.py  sort_node_distances.py  summarize.py  test.sh  triangle_subdivisions.sh
scripts/results/: graph_sizes.csv
scripts/results/benchmarks/: results.csv
scripts/results/benchmarks/aegaeis/: results-approximate.csv  results-exact.csv  results-visibility.csv  results.csv
scripts/results/benchmarks/medi/: results-approximate-astar_02.csv  results-approximate-astar_05.csv  results-approximate_02.csv  results-approximate_05.csv  results-visibility.csv  results.csv
scripts/results/benchmarks/pata/: results-approximate.csv  results-exact.csv  results-visibility.csv  results.csv
src/: convert.cpp  distance_one_to_all.cpp  extract_boundary.cpp  find_nodes.cpp  graph_stats.cpp  main.cpp  make_bin.cpp  make_explicit.cpp  make_gl.cpp  make_granular_triangulation.cpp  make_pruned_gl.cpp  make_steiner_gl.cpp  project.cpp  prune_graph.cpp  query.h  route.cpp  route_interactive_ch.cpp  route_interactive_steiner.cpp  route_interactive_triangulation.cpp  route_interactive_visibility.cpp  routing.cpp  routing.h  routing_impl.h  steiner_routing.h  subdivision_stats.cpp
src/cli/: cmdline_find_nodes.c  cmdline_find_nodes.h  cmdline_graph_stats.c  cmdline_graph_stats.h  cmdline_one_to_all.c  cmdline_one_to_all.h  cmdline_prune_graph.c  cmdline_prune_graph.h  cmdline_route.c  cmdline_route.h  cmdline_route_interactive.c  cmdline_route_interactive.h  find_nodes.ggo  graph_stats.ggo  one-to-all.ggo  prune_graph.ggo  route.ggo  route_interactive.ggo
src/file-io/: file_io.h  file_io_impl.h  fmi_file_io.h  fmi_file_io_impl.h  formatters.h  formatters_impl.h  gl_file_io.h  gl_file_io_impl.h  triangulation_file_io.h  triangulation_file_io_impl.h
src/graph/: adjacency_list.h  adjacency_list_impl.h  base_types.h  base_types_impl.h  geometry.h  geometry_impl.h  graph.h  graph_impl.h  graph_properties.h  node_properties.h  subgraph.h  topology.h  unidirectional_adjacency_list.h  unidirectional_adjacency_list_impl.h
src/interface/: Client.cpp  Client.h  Graph.h  Graph_impl.h  Query.h  Query_impl.h  README.md  Router.h  Router_impl.h  RoutingConfig.h  Statistics.h  TypeErasure.h
src/routing/: a_star_queue.h  default_neighbors_impl.h  dijkstra.h  dijkstra_concepts.h  dijkstra_impl.h  dijkstra_labels.h  dijkstra_queues.h  node_cost_pair.h  node_label.h  node_labels.h  node_labels_impl.h  router.h  router_bidirectional.h  router_bidirectional_impl.h  router_impl.h
src/test/: test.h  test_read.cpp  test_read_aegaeis.cpp  test_route_aegaeis.cpp  test_route_stgtregbz.cpp  test_route_toy.cpp  test_steiner_graph.cpp
src/triangulation/: README.md  compact_node_info_container.h  compact_node_info_container_impl.h  distance_labels.h  fast_map.h  fast_map_impl.h  frontier_labels.h  geometric_node_cost_pair.h  node_aggregate_container.h  node_cache.h  node_info_array.h  node_info_array_impl.h  node_info_container.h  node_info_container_impl.h  node_properties.h  polyhedron.h  polyhedron_impl.h  pruned_steiner_neighbors_impl.h  steiner_graph.h  steiner_graph_impl.h  steiner_labels.h  steiner_labels_impl.h  steiner_neighbors.h  steiner_neighbors_impl.h  steiner_neighbors_pruned_simplified_impl.h  subdivision_info.h  subdivision_info_impl.h  subdivision_table.h  subdivision_table_impl.h  triangulation.h
src/util/: contract.h  counting_iterator.h  csv.h  csv_impl.h  debug.h  is_in_range.h  keep_duplicates.h  list_intersection.h  list_invert.h  memory_usage.h  memory_usage_impl.h  optional.h  remove_duplicates.h  set_minus.h
